apiVersion: v1beta1 update

--- a/lab-modules/dt-k8s-otel-o11y-logs/opentelemetry/collector/events/otel-collector-events-crd-01.yaml
+++ b/lab-modules/dt-k8s-otel-o11y-logs/opentelemetry/collector/events/otel-collector-events-crd-01.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: opentelemetry.io/v1alpha1
+apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: dynatrace-events
@@ -16,7 +16,7 @@ spec:
   resources:
     limits:
       memory: 512Mi
-  config: |
+  config:
     receivers:
       k8sobjects/events:
         auth_type: serviceAccount
