--- a/cluster-manifests/cert-manager.yaml
+++ b/cluster-manifests/cert-manager.yaml
@@ -12,6 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# cert-manager v1.14.4
+
 apiVersion: v1
 kind: Namespace
 metadata:
