--- a/lab-modules/dt-k8s-otel-o11y-cap/opentelemetry/collector/dynatrace/otel-collector-dynatrace-daemonset-crd.yaml
+++ b/lab-modules/dt-k8s-otel-o11y-cap/opentelemetry/collector/dynatrace/otel-collector-dynatrace-daemonset-crd.yaml
@@ -97,6 +97,9 @@ spec:
         - key: dt.security_context
           from_attribute: k8s.cluster.name
           action: insert
+        - key: service.name
+          from_attribute: app.label.component
+          action: insert
       resourcedetection/gcp:
         # detectors: [env, gcp]
         detectors: [env]
@@ -140,6 +143,10 @@ spec:
               from: pod
             - tag_name: app.label.name
               key: app.kubernetes.io/name
+              from: pod
+          annotations:
+            - tag_name: app.annotation.service.namespace
+              key: instrumentation.opentelemetry.io/service.namespace
               from: pod
         pod_association:
           - sources:
