--- a/lab-modules/dt-k8s-otel-o11y-cap/opentelemetry/collector/dynatrace/otel-collector-dynatrace-deployment-crd.yaml
+++ b/lab-modules/dt-k8s-otel-o11y-cap/opentelemetry/collector/dynatrace/otel-collector-dynatrace-deployment-crd.yaml
@@ -92,6 +92,10 @@ spec:
             - tag_name: app.label.name
               key: app.kubernetes.io/name
               from: pod
+          annotations:
+            - tag_name: app.annotation.service.namespace
+              key: instrumentation.opentelemetry.io/service.namespace
+              from: pod
         pod_association:
           - sources:
               - from: resource_attribute
