--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -7,8 +7,10 @@ nav:
   - '3. Codespaces': 3-codespaces.md
   - '4. OpenTelemetry Logs': 4-opentelemetry-logs.md
   - '5. OpenTelemetry Capstone': 5-opentelemetry-capstone.md
-  - '6. Dynatrace OpenPipeline': 6-dynatrace-openpipeline.md
-  - '7. Cleanup': cleanup.md
+  - '6. Dynatrace OpenPipeline Collector Logs': 6-dynatrace-openpipeline-collector-logs.md
+  - '7. Dynatrace OpenPipeline Astronomy Shop Logs': 7-dynatrace-openpipeline-astronomy-shop-logs.md
+  - '8. Dynatrace OpenPipeline Kubernetes Events': 8-dynatrace-openpipeline-kubernetes-events.md
+  - '9. Cleanup': cleanup.md
 theme:
   name: material
   custom_dir: docs/overrides
